--- a/templates/home/admin/album_form.html
+++ b/templates/home/admin/album_form.html
@@ -46,6 +46,13 @@
                     {{ form.description }}
                 </div>
 
+                <!-- Date -->
+                <div>
+                    <label class="block text-sm font-medium text-gray-700 mb-2">Date (BS)</label>
+                    {{ form.date_bs }}
+                    <p class="mt-1 text-xs text-gray-500">Format: YYYY-MM-DD (e.g., 2082-01-15)</p>
+                </div>
+
                 <!-- Display Order -->
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-2">Display Order</label>
@@ -63,4 +70,18 @@
 
     </div>
 </div>
+{% endblock %}
+
+{% block extra_css %}
+<link href="https://nepalidatepicker.sajanmaharjan.com.np/v5/nepali.datepicker/css/nepali.datepicker.v5.0.6.min.css" rel="stylesheet" type="text/css"/>
+{% endblock %}
+
+{% block extra_js %}
+<script src="https://nepalidatepicker.sajanmaharjan.com.np/v5/nepali.datepicker/js/nepali.datepicker.v5.0.6.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+    window.onload = function() {
+        var mainInput = document.getElementById("nepali-datepicker");
+        if(mainInput) mainInput.nepaliDatePicker();
+    };
+</script>
 {% endblock %}
