--- a/templates/home/admin/gallery_list.html
+++ b/templates/home/admin/gallery_list.html
@@ -130,7 +130,7 @@
                 <div class="text-center py-12 text-gray-500">
                     <i class="fas fa-images text-4xl mb-4 text-gray-300"></i>
                     <p>No images in gallery.</p>
-                    <a href="{% url 'home:gallery_add' %}" class="text-blue-600 hover:underline mt-2 inline-block">Upload your first photo</a>
+                    <a href="{% url 'home:gallery_add' %}{% if current_album_id %}?album_id={{ current_album_id }}{% endif %}" class="text-blue-600 hover:underline mt-2 inline-block">Upload your first photo</a>
                 </div>
                 {% endif %}
             </div>
